--- a/pokedex/package.json
+++ b/pokedex/package.json
@@ -22,11 +22,15 @@
     "eslint": "8.40.0",
     "eslint-config-next": "13.4.2",
     "framer-motion": "^10.12.12",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "next": "13.4.2",
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-modal": "^3.16.1",
+    "react-router-dom": "^6.11.2",
+    "sort-by": "^1.2.0",
     "tailwindcss": "3.3.2",
     "typescript": "5.0.4"
   },
